added rank feature

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/pranjal.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pranjal's Portfolio</title>
+    <style>
+      .perspective-1000 {
+        perspective: 1000px;
+      }
+
+      .rotateX-180 {
+        transform: rotateX(180deg);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
